# Dwave

./: CMakeLists.txt  README.md
include/: Dwave.hpp  texture.hpp
shader/: firstPass.frag  firstPass.vert  lebfirstPass.frag  lebfirstPass.vert  lebsecondPass.frag  lebsecondPass.vert  secondPass.vert  secondPassCropCylinder.frag  secondPassDVR.frag  secondPassFinal.frag  secondPassHSVSurface.frag  secondPassMeanFiltering.frag  secondPassNormalFusion.frag  secondPassSoebel.frag
src/: Dwave.cpp  main.cpp  main.py  shader.cpp  texture.cpp
